--- a/futbol-app/backend/requirements.txt
+++ b/futbol-app/backend/requirements.txt
@@ -7,4 +7,6 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 alembic==1.12.1
 psycopg2-binary==2.9.9
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+sentry-sdk==2.27.0
+fastapi-pagination==0.12.12 
