add jugador models with endpoint

--- a/futbol-app/backend/requirements.txt
+++ b/futbol-app/backend/requirements.txt
@@ -9,4 +9,5 @@ alembic==1.12.1
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 sentry-sdk==2.27.0
-fastapi-pagination==0.12.12 
+fastapi-pagination==0.12.12
+fastapi-filter==1.1.0 
