--- a/futbol-app/backend/pyproject.toml
+++ b/futbol-app/backend/pyproject.toml
@@ -21,12 +21,16 @@ pydantic-settings = "^2.0.3"
 pydantic = {extras = ["email"], version = "^2.5.2"}
 python-jose = "^3.3.0"
 fastapi-injector = "^0.5.3"
-fastapi-filter = {extras = ["sqlalchemy"], version = "^1.0.0"}
 fastapi-pagination = "^0.12.13"
 python-multipart = "^0.0.9"
 alembic = "^1.12.1"
 requests = "^2.32.3"
 axiom-py = "^0.9.0"
+sentry-sdk = "^2.28.0"
+injector = "^0.22.0"
+alembic-postgresql-enum = "^1.7.0"
+alembic-utils = "^0.8.8"
+fastapi-filter = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.23.2"
